@@ -1672,7 +1672,7 @@ operator|=
 operator|new
 name|ZKMasterAddressWatcher
 argument_list|(
-name|zooKeeperWrapper
+name|this
 argument_list|)
 expr_stmt|;
 name|serverManager
@@ -1734,6 +1734,20 @@ operator|.
 name|waitForMasterAddressAvailability
 argument_list|()
 expr_stmt|;
+comment|// Check if we need to shutdown instead of taking control
+if|if
+condition|(
+name|this
+operator|.
+name|shutdownRequested
+operator|.
+name|get
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
+elseif|else
 if|if
 condition|(
 name|zooKeeperWrapper
@@ -1744,6 +1758,13 @@ name|address
 argument_list|)
 condition|)
 block|{
+name|zooKeeperWrapper
+operator|.
+name|setClusterState
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
 return|return;
 block|}
 block|}
@@ -3341,6 +3362,15 @@ operator|.
 name|set
 argument_list|(
 literal|true
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|zooKeeperWrapper
+operator|.
+name|setClusterState
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -5743,6 +5773,25 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|master
+operator|.
+name|shutdownRequested
+operator|.
+name|get
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Won't bring the Master up as a shutdown is requested"
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
 name|master
 operator|.
 name|start
