@@ -132,19 +132,33 @@ specifier|final
 name|ZooKeeperWrapper
 name|zooKeeper
 decl_stmt|;
+specifier|private
+specifier|final
+name|HMaster
+name|master
+decl_stmt|;
 comment|/**    * Create a watcher with a ZooKeeperWrapper instance.    * @param zooKeeper ZooKeeperWrapper to use to talk to ZooKeeper.    */
 specifier|public
 name|ZKMasterAddressWatcher
 parameter_list|(
-name|ZooKeeperWrapper
-name|zooKeeper
+name|HMaster
+name|master
 parameter_list|)
 block|{
 name|this
 operator|.
+name|master
+operator|=
+name|master
+expr_stmt|;
+name|this
+operator|.
 name|zooKeeper
 operator|=
-name|zooKeeper
+name|master
+operator|.
+name|getZooKeeperWrapper
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * @see org.apache.zookeeper.Watcher#process(org.apache.zookeeper.WatchedEvent)    */
@@ -167,6 +181,24 @@ operator|.
 name|getType
 argument_list|()
 decl_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+operator|(
+literal|"Got event "
+operator|+
+name|type
+operator|+
+literal|" with path "
+operator|+
+name|event
+operator|.
+name|getPath
+argument_list|()
+operator|)
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|type
@@ -179,6 +211,44 @@ name|NodeDeleted
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+name|event
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|this
+operator|.
+name|zooKeeper
+operator|.
+name|clusterStateZNode
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"The cluster was shutdown while waiting, shutting down"
+operator|+
+literal|" this master."
+argument_list|)
+expr_stmt|;
+name|master
+operator|.
+name|shutdownRequested
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|LOG
 operator|.
 name|debug
@@ -188,6 +258,51 @@ argument_list|)
 expr_stmt|;
 name|notifyAll
 argument_list|()
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|type
+operator|.
+name|equals
+argument_list|(
+name|EventType
+operator|.
+name|NodeCreated
+argument_list|)
+operator|&&
+name|event
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|this
+operator|.
+name|zooKeeper
+operator|.
+name|clusterStateZNode
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Resetting the watch on the cluster state node."
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|zooKeeper
+operator|.
+name|setClusterStateWatch
+argument_list|(
+name|this
+argument_list|)
 expr_stmt|;
 block|}
 block|}
@@ -216,7 +331,18 @@ name|LOG
 operator|.
 name|debug
 argument_list|(
-literal|"Waiting for master address ZNode to be deleted"
+literal|"Waiting for master address ZNode to be deleted "
+operator|+
+literal|"and watching the cluster state node"
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|zooKeeper
+operator|.
+name|setClusterStateWatch
+argument_list|(
+name|this
 argument_list|)
 expr_stmt|;
 name|wait
