@@ -351,25 +351,30 @@ specifier|final
 name|WatcherWrapper
 name|watcher
 decl_stmt|;
-specifier|private
+specifier|public
 specifier|final
 name|String
 name|rootRegionZNode
 decl_stmt|;
-specifier|private
+specifier|public
 specifier|final
 name|String
 name|outOfSafeModeZNode
 decl_stmt|;
-specifier|private
+specifier|public
 specifier|final
 name|String
 name|rsZNode
 decl_stmt|;
-specifier|private
+specifier|public
 specifier|final
 name|String
 name|masterElectionZNode
+decl_stmt|;
+specifier|public
+specifier|final
+name|String
+name|clusterStateZNode
 decl_stmt|;
 comment|/**    * Create a ZooKeeperWrapper.    * @param conf HBaseConfiguration to read settings from.    * @throws IOException If a connection error occurs.    */
 specifier|public
@@ -543,6 +548,18 @@ argument_list|,
 literal|"master"
 argument_list|)
 decl_stmt|;
+name|String
+name|stateZNodeName
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"zookeeper.znode.state"
+argument_list|,
+literal|"shutdown"
+argument_list|)
+decl_stmt|;
 name|rootRegionZNode
 operator|=
 name|getZNode
@@ -577,6 +594,15 @@ argument_list|(
 name|parentZNode
 argument_list|,
 name|masterAddressZNodeName
+argument_list|)
+expr_stmt|;
+name|clusterStateZNode
+operator|=
+name|getZNode
+argument_list|(
+name|parentZNode
+argument_list|,
+name|stateZNodeName
 argument_list|)
 expr_stmt|;
 block|}
@@ -1049,6 +1075,189 @@ name|masterElectionZNode
 argument_list|,
 name|watcher
 argument_list|)
+return|;
+block|}
+comment|/**    * Watch the state of the cluster, up or down    * @param watcher Watcher to set on cluster state node    */
+specifier|public
+name|void
+name|setClusterStateWatch
+parameter_list|(
+name|Watcher
+name|watcher
+parameter_list|)
+block|{
+try|try
+block|{
+name|zooKeeper
+operator|.
+name|exists
+argument_list|(
+name|clusterStateZNode
+argument_list|,
+name|watcher
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Failed to check on ZNode "
+operator|+
+name|clusterStateZNode
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Failed to check on ZNode "
+operator|+
+name|clusterStateZNode
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Set the cluster state, up or down    * @param up True to write the node, false to delete it    * @return true if it worked, else it's false    */
+specifier|public
+name|boolean
+name|setClusterState
+parameter_list|(
+name|boolean
+name|up
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|ensureParentExists
+argument_list|(
+name|clusterStateZNode
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+try|try
+block|{
+if|if
+condition|(
+name|up
+condition|)
+block|{
+name|byte
+index|[]
+name|data
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"up"
+argument_list|)
+decl_stmt|;
+name|zooKeeper
+operator|.
+name|create
+argument_list|(
+name|clusterStateZNode
+argument_list|,
+name|data
+argument_list|,
+name|Ids
+operator|.
+name|OPEN_ACL_UNSAFE
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"State node wrote in ZooKeeper"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|zooKeeper
+operator|.
+name|delete
+argument_list|(
+name|clusterStateZNode
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"State node deleted in ZooKeeper"
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|true
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Failed to set state node in ZooKeeper"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Failed to set state node in ZooKeeper"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|false
 return|;
 block|}
 comment|/**    * Set a watcher on the master address ZNode. The watcher will be set unless    * an exception occurs with ZooKeeper.    * @param watcher Watcher to set on master address ZNode.    * @return true if watcher was set, false otherwise.    */
